--- a/C_Calculator.vcxproj
+++ b/C_Calculator.vcxproj
@@ -70,8 +70,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>d:\Users\Kids\Documents\C Practice\C Dirs\SDL2-2.0.10\include;$(IncludePath)</IncludePath>
-    <LibraryPath>d:\Users\Kids\Documents\C Practice\C Dirs\SDL2-2.0.10\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>d:\Users\Kids\Documents\C Practice\C Dirs\SDL2_ttf-2.0.15\include;d:\Users\Kids\Documents\C Practice\C Dirs\SDL2-2.0.10\include;$(IncludePath)</IncludePath>
+    <LibraryPath>d:\Users\Kids\Documents\C Practice\C Dirs\SDL2_ttf-2.0.15\lib\x86;d:\Users\Kids\Documents\C Practice\C Dirs\SDL2-2.0.10\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -82,7 +82,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
